Opened 16 years ago
Closed 16 years ago
#3801 closed bug (fixed)
Scrollbar Knob Size not Proportional to Page Size
Reported by: | bonefish | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Haiku hrev30280
Observation:
Open a default size Terminal, execute a "seq 500", and click on the scrollbar above the scroll knob, so that the content scrolls one page up. The knob, though not minimally-sized, has moved less than its height.
The same can be observed in Tracker. E.g. open /boot/system/bin and adjust the window height, so that the vertical scroll knob is a bit bigger than its minimum height.
Expected behavior:
As long as the knob has not been forced to its minimum height, scrolling by one page should move the knob by exactly its full height.
I believe Stippi considers this a feature, but IMHO it's neither conventional nor consistent.
Change History (4)
comment:1 by , 16 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:3 by , 16 years ago
But after looking at it again, I do remember that I used to consider it a feature... your memory is obviously better than mine. :-)
comment:4 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
I absolutely agree that this is not consistent and don't consider it a feature. :-)