Do not scale the scroll bar thumb size between min size and max size, but between 0 and max size and restrict to min size afterwards. This leads to more consistent behavior and a more reasonable scroll bar size until the minimum size is reached. And it also fixes #3801. Probably also fixes the bug where some Pe windows could not be scrolled, or only scrolled very little. I assume this because a special trick is used for proportional scroll bars in Pe. It does not set the proportion, but only large steps and then the proportion is calculated from that. But since the minimum size was not taken into account before, it would have exactly this inconsistency. Since the size now ranges from 0 to max, this should now be in sync. But I didn't have a Pe window handy which exposed this bug to confirm my assumption...

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30309 a95241bf-73f2-0310-859d-f6bbb57e9c96